--- a/styles/question.css
+++ b/styles/question.css
@@ -14,7 +14,6 @@
 .h5p-question-content {
   margin: 1.5em;
 }
-
 .h5p-question-feedback {
   font-weight: bold;
   color: #1a73d9;
@@ -27,6 +26,15 @@
   margin: 1.5em;
   opacity: 1;
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s ease-in;
+}
+.h5p-joubelui-score-bar {
+  display: inline-block;
+  margin-right: .5em;
+}
+.h5p-question-feedback-content {
+  display: inline-block;
+  position: relative;
+  top: -1em;
 }
 
 .h5p-question-buttons {
