Updated button margins.

--- a/styles/question.css
+++ b/styles/question.css
@@ -37,6 +37,7 @@
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s cubic-bezier(0,1,0,1);
 }
 .h5p-question-buttons.h5p-question-visible {
+  max-height: none;
   margin: 1.5em 1.5em 0;
   opacity: 1;
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s ease-in;
@@ -44,7 +45,7 @@
 
 /* Styling of JoubelUI button, should be moved to JoubelUI */
 .h5p-question .h5p-joubelui-button {
-  margin: 0 1.5em 1.5em 0;
+  margin: 0 1em 1.5em 0;
   padding: 0.5em 1.25em;
   border-radius: 2em;
   background: #1a73d9;
@@ -52,17 +53,14 @@
   border: none;
   box-shadow: none;
   float: right;
+  outline: none;
 }
 .h5p-question .h5p-joubelui-button:first-child {
   margin: 0 0 1.5em;
 }
-.h5p-question .h5p-joubelui-button:hover {
-  background: #1356a3;
-}
-
+.h5p-question .h5p-joubelui-button:hover,
 .h5p-question .h5p-joubelui-button:focus {
   background: #1356a3;
-  outline: none;
 }
 .h5p-question .h5p-joubelui-button:active {
   position: relative;
