--- a/styles/question.css
+++ b/styles/question.css
@@ -1,9 +1,35 @@
 .h5p-question-image {
+  text-align: center;
+  margin: 1.5em auto;
+}
+.h5p-question-image img {
   display: block;
   max-width: 100%;
   max-height: 10em;
-  margin: 1.5em auto;
+  border: 0;
+  outline: none;
+  -webkit-transition: max-height 0.3s;
 }
+.h5p-question-image-wrap {
+  display: inline-block;
+  position: relative;
+}
+.h5p-question-image-scalable:before {
+  position: absolute;
+  font-family: 'H5PFontAwesome4';
+  content: "\f067";
+  right: 0.5em;
+  top: 0.5em;
+  color: #fff;
+  text-shadow: 0 0 0.25em rgba(0, 0, 0, 0.75);
+  width: 1em;
+  height: 1em;
+  line-height: 1em;
+}
+.h5p-question-image-large .h5p-question-image-scalable:before {
+  content: "\f068";
+}
+
 .h5p-question-introduction {
   margin: 1.5em;
 }
