--- a/styles/question.css
+++ b/styles/question.css
@@ -125,3 +125,13 @@
 .h5p-question .h5p-question-check-answer:before {
   content: "\F058";
 }
+
+/* Remove left margin for h5p-no-frame */
+.h5p-no-frame > .h5p-question > .h5p-question-introduction,
+.h5p-no-frame > .h5p-question > .h5p-question-buttons,
+.h5p-no-frame > .h5p-question > .h5p-question-image,
+.h5p-no-frame > .h5p-question > .h5p-question-content,
+.h5p-no-frame > .h5p-question > .h5p-question-feedback {
+  margin-left: 0;
+  margin-right: 0;
+}
