--- a/styles/question.css
+++ b/styles/question.css
@@ -82,19 +82,27 @@
 
 /* Styling of JoubelUI button, should be moved to JoubelUI */
 .h5p-question .h5p-joubelui-button {
-  margin: 0 1em 1.5em 0;
+  margin: 0 1em 1.5em;
   padding: 0.5em 1.25em;
   border-radius: 2em;
   background: #1a73d9;
   color: #ffffff;
   border: none;
   box-shadow: none;
-  float: right;
   outline: none;
 }
 .h5p-question .h5p-joubelui-button:first-child {
+  margin: 0 0.5em 1.5em 0;
+}
+
+.h5p-question .h5p-joubelui-button:last-child {
+  margin: 0 0 1.5em 0.5em;
+}
+
+.h5p-question .h5p-joubelui-button:first-child:last-child {
   margin: 0 0 1.5em;
 }
+
 .h5p-question .h5p-joubelui-button:hover,
 .h5p-question .h5p-joubelui-button:focus {
   background: #1356a3;
