Hide button section instantly to prevent 'bouncy' h5p frame. HFJ-835

--- a/styles/question.css
+++ b/styles/question.css
@@ -86,7 +86,7 @@
   margin: 0 1.5em;
   max-height: 0;
   opacity: 0;
-  transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s cubic-bezier(0,1,0,1);
+  transition: none;
 }
 .h5p-question-buttons.h5p-question-visible {
   max-height: none;
