--- a/styles/question.css
+++ b/styles/question.css
@@ -193,3 +193,9 @@
   margin-bottom: 0;
 }
 
+/* CP specific styles */
+.h5p-course-presentation .h5p-question-introduction > p {
+  font-size: 1.125em;
+  line-height: 1.25em;
+  margin: 0;
+}
