--- a/styles/question.css
+++ b/styles/question.css
@@ -23,7 +23,9 @@
   -moz-transition: transform 0.3s, margin 0.3s;
   transition: transform 0.3s, margin 0.3s;
 }
-.h5p-question-image-fill-width .h5p-question-image-wrap {
+.h5p-question-image-fill-width .h5p-question-image-wrap,
+.h5p-no-frame > .h5p-question .h5p-question-image-wrap,
+.h5p-question.h5p-transparent .h5p-question-image-wrap {
   -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
   margin: 0;
