--- a/styles/question.css
+++ b/styles/question.css
@@ -1,3 +1,7 @@
+.h5p-question {
+  background: rgba(255, 255, 255, 0.9);
+}
+
 .h5p-question-image {
   text-align: left;
   margin: 0 0 1em;
@@ -25,7 +29,7 @@
 }
 .h5p-question-image-fill-width .h5p-question-image-wrap,
 .h5p-no-frame > .h5p-question .h5p-question-image-wrap,
-.h5p-question.h5p-transparent .h5p-question-image-wrap {
+.h5p-transparent .h5p-question .h5p-question-image-wrap {
   -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
   margin: 0;
@@ -109,18 +113,18 @@
 
 /* Remove margins when no frame or transparent */
 .h5p-no-frame > .h5p-question > *,
-.h5p-question.h5p-transparent > * {
+.h5p-transparent .h5p-question > * {
   margin-left: 0;
   margin-right: 0;
 }
 
 .h5p-no-frame > .h5p-question > *:first-child,
-.h5p-question.h5p-transparent > *:first-child {
+.h5p-transparent .h5p-question > *:first-child {
   margin-top: 0;
 }
 
 .h5p-no-frame > .h5p-question > *:last-child,
-.h5p-question.h5p-transparent > *:last-child {
+.h5p-transparent .h5p-question > *:last-child {
   margin-bottom: 0;
 }
 
