--- a/styles/question.css
+++ b/styles/question.css
@@ -28,6 +28,20 @@
   -moz-transition: transform 0.3s, margin 0.3s;
   transition: transform 0.3s, margin 0.3s;
 }
+
+.h5p-question-image-overlay {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.h5p-question-image-overlay.show {
+  display: block;
+}
+
 .h5p-question-image-fill-width .h5p-question-image-wrap,
 .h5p-no-frame > .h5p-question .h5p-question-image-wrap,
 .h5p-transparent .h5p-question .h5p-question-image-wrap {
