--- a/styles/question.css
+++ b/styles/question.css
@@ -11,6 +11,7 @@
 .h5p-question-image img {
   display: block;
   max-width: 100%;
+  height: auto;
   max-height: 10em;
   border: 0;
   outline: none;
@@ -27,6 +28,7 @@
   -webkit-transition: -webkit-transform 0.3s, margin 0.3s;
   -moz-transition: transform 0.3s, margin 0.3s;
   transition: transform 0.3s, margin 0.3s;
+  max-width: calc(100% - 2em);
 }
 
 .h5p-question-image-overlay {
@@ -48,6 +50,7 @@
   -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
   margin: 0;
+  max-width: 100%;
 }
 
 .h5p-question-image-scalable {
