--- a/styles/question.css
+++ b/styles/question.css
@@ -5,6 +5,9 @@
 .h5p-question-video {
   line-height: 0;
 }
+.h5p-question-video > video {
+  width: 100%;
+}
 .h5p-question-image {
   text-align: left;
   margin: 0 0 1em;
