--- a/styles/question.css
+++ b/styles/question.css
@@ -31,13 +31,13 @@
 }
 
 .h5p-question-image.animatable .h5p-question-image-wrap.h5p-question-image-scalable {
-  -webkit-transition: -webkit-transform 0.3s 0.3s, width 0.3s 0s;
-  transition: transform 0.3s 0.3s, width 0.3s 0s;
+  -webkit-transition: -webkit-transform 0.3s 0.3s, margin 0.3s 0.3s, width 0.3s 0s;
+  transition: transform 0.3s 0.3s, margin 0.3s 0.3s, width 0.3s 0s;
 }
 
 .h5p-question-image.animatable.h5p-question-image-fill-width .h5p-question-image-wrap {
-  -webkit-transition: -webkit-transform 0.3s 0s, width 0.3s 0.3s;
-  transition: transform 0.3s 0s, width 0.3s 0.3s;
+  -webkit-transition: -webkit-transform 0.3s 0s, margin 0.3s 0s, width 0.3s 0.3s;
+  transition: transform 0.3s 0s, margin 0.3s 0s, width 0.3s 0.3s;
 }
 
 .h5p-question-image-overlay {
