--- a/styles/question.css
+++ b/styles/question.css
@@ -128,6 +128,8 @@
   position: relative;
   top: -1em;
   margin-top: .8em;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .h5p-question-buttons {
