HFJ-1485 - CSS rule for transparent Question with image-wrap changed to be same as the other transparent Question rules.

--- a/styles/question.css
+++ b/styles/question.css
@@ -55,7 +55,7 @@
 
 .h5p-question-image-fill-width .h5p-question-image-wrap,
 .h5p-no-frame > .h5p-question .h5p-question-image-wrap,
-.h5p-transparent .h5p-question .h5p-question-image-wrap {
+.h5p-transparent > div > .h5p-question .h5p-question-image-wrap {
   -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
   margin: 0;
