Made tip icon break line with feedback text.
HFP-48

--- a/styles/question.css
+++ b/styles/question.css
@@ -137,6 +137,10 @@
   backface-visibility: hidden;
 }
 
+.h5p-question-feedback-content-text {
+  display: inline-block;
+}
+
 .h5p-question-buttons {
   margin: 0 1em;
   max-height: 0;
