--- a/styles/question.css
+++ b/styles/question.css
@@ -216,9 +216,16 @@
 .h5p-question-feedback.h5p-question-popup .h5p-question-feedback-content {
   display: block;
   word-break: break-all;
+  top: 0;
+  margin-top: 0.5em;
 }
 
-.h5p-question-feedback.h5p-question-popup .h5p-question-retry-button {
+.h5p-question-feedback.h5p-question-popup .h5p-question-buttons {
+  margin: -1em 0;
+  transition: none;
+}
+
+.h5p-question-feedback.h5p-question-popup .h5p-question-buttons .h5p-question-retry-button{
   margin: 0;
 }
 
