--- a/styles/question.css
+++ b/styles/question.css
@@ -213,6 +213,14 @@
   transition: none;
 }
 
+.h5p-question-feedback.h5p-question-popup {
+  display: none;
+}
+
+.h5p-question-feedback.h5p-question-popup.h5p-question-visible {
+  display: block;
+}
+
 .h5p-question-feedback.h5p-question-popup .h5p-question-feedback-content {
   display: block;
   word-break: break-all;
