--- a/styles/question.css
+++ b/styles/question.css
@@ -222,6 +222,7 @@
 }
 
 .h5p-question-feedback.h5p-question-popup .h5p-question-feedback-content {
+  display: block;
   word-break: break-all;
   top: 0;
 }
