--- a/styles/question.css
+++ b/styles/question.css
@@ -210,17 +210,15 @@
 
 .h5p-question-feedback.h5p-question-popup {
   position: absolute;
+  display: none;
   width: 22em;
+  max-width: 100%;
   margin: 0;
   background-color: white;
   box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.59);
   border-radius: 1em;
   padding: 1.5em;
   transition: none;
-}
-
-.h5p-question-feedback.h5p-question-popup {
-  display: none;
 }
 
 .h5p-question-feedback.h5p-question-popup.h5p-question-visible {
@@ -235,6 +233,10 @@
 
 .h5p-question-feedback.h5p-question-popup .h5p-question-retry-button {
   margin: 1em 0 0 0;
+}
+
+.h5p-question-feedback.h5p-question-popup .h5p-question-buttons {
+  margin: 0;
 }
 
 .h5p-question-feedback.h5p-question-popup .h5p-question-feedback-close {
