--- a/styles/question.css
+++ b/styles/question.css
@@ -214,6 +214,7 @@
   width: 22em;
   max-width: 100%;
   margin: 0;
+  z-index: 3;
   background-color: white;
   box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.59);
   border-radius: 1em;
