HFP-266 More QA changes, points relate to QA 4,5. Fixed jsdoc for positionFeedbackPopup 6. Since new check is in place, variables are now defined at start instead of setting them again in else. new issue 1. No longer deal with parameter default, dealt with by checks related to point 8,9 now. new issue 3. Fixed z index of tail.

--- a/styles/question.css
+++ b/styles/question.css
@@ -260,6 +260,7 @@
   position: absolute;
   width: 1em;
   height: 1em;
+  z-index: 3;
   background-color: white;
   box-shadow: -2px -2px 0px 0px rgba(0, 0, 0, 0.18);
   transform: rotate(225deg);
