Making feedback work in IE 11 [HFP-1044]

--- a/styles/explainer.css
+++ b/styles/explainer.css
@@ -1,3 +1,8 @@
+.h5p-question-explanation {
+  /* Needed this to make it display in IE 11 */
+  position: relative;
+}
+
 .h5p-question-explanation-container {
   margin: 0;
   padding: 1em;
