--- a/styles/question.css
+++ b/styles/question.css
@@ -205,11 +205,11 @@
 .h5p-question-plus-one,
 .h5p-question-minus-one {
   position: absolute;
-  width: 30px;
-  height: 19.14893617px;
+  width: 2em;
+  height: calc(2em * 0.638297872);
   background-size: 100% 100%;
-  right: -24px;
-  top: -13px;
+  right: -21px;
+  top: -12px;
   z-index: 1;
   opacity: 1;
   transition: opacity 150ms linear, transform 150ms linear;
