Change ScorePoints into a separate class to ease implementation
HFP-1261 HFP-1262 HFP-1260

--- a/styles/question.css
+++ b/styles/question.css
@@ -208,8 +208,8 @@
   width: 2em;
   height: calc(2em * 0.638297872);
   background-size: 100% 100%;
-  right: -21px;
-  top: -12px;
+  right: -1.615384615em;
+  top: -0.923076923em;
   z-index: 1;
   opacity: 1;
   transition: opacity 150ms linear, transform 150ms linear;
