--- a/styles/question.css
+++ b/styles/question.css
@@ -120,7 +120,10 @@
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s cubic-bezier(0,1,0,1);
 }
 .h5p-question-feedback.h5p-question-visible {
-  margin: 1em;
+  background: #F5F5F5;
+  opacity: 40%;
+  margin: 0em;
+  padding: 1em;
   opacity: 1;
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s ease-in;
 }
@@ -129,10 +132,14 @@
   margin-right: .5em;
 }
 .h5p-question-feedback-content {
+  color: #555555;
+  weight bold;
+  font-size: 1em;
   display: inline-block;
   position: relative;
   top: -1em;
   margin-top: .8em;
+  margin-left: 0.8em;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
@@ -148,9 +155,16 @@
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s cubic-bezier(0,1,0,1);
 }
 .h5p-question-buttons.h5p-question-visible {
+  margin: 0;
+  padding-left: 1em;
+  padding-right: 1em;
   max-height: none;
   opacity: 1;
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s ease-in;
+}
+
+.h5p-question-buttons.h5p-question-visible.feedback-shown {
+  background: #F5F5F5;
 }
 
 /* Remove margins when no frame or transparent */
