--- a/styles/question.css
+++ b/styles/question.css
@@ -111,28 +111,33 @@
 .h5p-question-content {
   margin: 1em;
 }
+.h5p-question-footer {
+  padding: 0em 1em;
+  background: rgba(0, 0, 0, 0.04);
+  border-top: 1px solid #dcdcdc;
+}
+
+.h5p-question-read {
+  padding-bottom: 1em;
+}
+
 .h5p-question-feedback {
   font-weight: bold;
   color: #1a73d9;
-  margin: 0 1em;
+
   max-height: 0;
   opacity: 0;
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s cubic-bezier(0,1,0,1);
 }
 .h5p-question-feedback.h5p-question-visible {
-  background: #F5F5F5;
   opacity: 40%;
-  margin: 0em;
-  padding: 1em;
+  padding: 1em 0 0 0;
   opacity: 1;
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s ease-in;
 }
-.h5p-joubelui-score-bar {
-  margin-right: .5em;
-}
 .h5p-question-feedback-content {
   color: #555555;
-  weight bold;
+  weight: bold;
   font-size: 1em;
   display: inline-block;
   position: relative;
@@ -148,22 +153,23 @@
 }
 
 .h5p-question-buttons {
-  margin: 0 1em;
   max-height: 0;
   opacity: 0;
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s cubic-bezier(0,1,0,1);
 }
+.h5p-question-buttons .h5p-joubelui-button {
+  margin: 0 0.5em 0 0 !important;
+}
 .h5p-question-buttons.h5p-question-visible {
-  margin: 0;
-  padding-left: 1em;
-  padding-right: 1em;
+  /*margin: 0;*/
+  padding: 1em 0 0 0;
   max-height: none;
   opacity: 1;
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s ease-in;
 }
 
 .h5p-question-buttons.h5p-question-visible.feedback-shown {
-  background: #F5F5F5;
+  /*padding-top: 1em;*/
 }
 
 /* Remove margins when no frame or transparent */
@@ -183,6 +189,11 @@
   margin-bottom: 0;
 }
 
+.h5p-no-frame .h5p-question-footer,
+.h5p-transparent .h5p-question-footer {
+  padding: 0;
+}
+
 /* CP specific styles */
 .h5p-course-presentation .h5p-question-introduction {
   font-size: 1.125em;
@@ -193,6 +204,13 @@
   font-size: 1em;
   line-height: 1em;
   margin: 0;
+}
+.h5p-course-presentation .h5p-question-footer {
+  background: transparent;
+}
+
+.h5p-question-read {
+  padding-bottom: 1em;
 }
 .h5p-question .h5p-hidden-read {
   width: 1px;
