--- a/styles/question.css
+++ b/styles/question.css
@@ -120,27 +120,25 @@
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s cubic-bezier(0,1,0,1);
 }
 .h5p-question-feedback.h5p-question-visible {
-  background: #F5F5F5;
   opacity: 40%;
   margin: 0em;
   padding: 1em;
   opacity: 1;
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s ease-in;
 }
-.h5p-joubelui-score-bar {
-  margin-right: .5em;
-}
 .h5p-question-feedback-content {
   color: #555555;
-  weight bold;
+  weight: bold;
   font-size: 1em;
-  display: inline-block;
-  position: relative;
-  top: -1em;
-  margin-top: .8em;
+  display: none;
   margin-left: 0.8em;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+}
+
+.h5p-question-feedback-content.has-content {
+  display: inline-block;
+  margin-bottom: 0.8em;
 }
 
 .h5p-question-feedback-content-text {
@@ -160,10 +158,6 @@
   max-height: none;
   opacity: 1;
   transition: max-height 0.15s ease, margin 0.15s ease, opacity 0.15s ease-in;
-}
-
-.h5p-question-buttons.h5p-question-visible.feedback-shown {
-  background: #F5F5F5;
 }
 
 /* Remove margins when no frame or transparent */
