HFP-1449 Fixes setting max height for elements that already has a width
When using setElementHeight the function assumed that the element always would be able to use 100% of the width minus its margins, this is incorrect for elements that already specify a width.
Fixes max height, max width and left position of popup so it does not overflow parent container in height or width, especially important on smaller devices.
Fixes feedback content text conflicting with the close button when feedback is popup, and makes sure contrast of close button is WCAG compliant.

--- a/styles/question.css
+++ b/styles/question.css
@@ -230,12 +230,17 @@
 
 .h5p-question-feedback.h5p-question-popup.h5p-question-visible {
   display: block;
+  box-sizing: border-box;
+  max-height: 100%;
 }
 
 .h5p-question-feedback.h5p-question-popup .h5p-question-feedback-content {
   display: block;
-  word-break: break-all;
   top: 0;
+}
+
+.h5p-question-feedback.h5p-question-popup.h5p-question-feedback-correct .h5p-question-feedback-content {
+  margin-right: 1.5em;
 }
 
 .h5p-question-feedback.h5p-question-popup .h5p-question-retry-button {
@@ -259,7 +264,7 @@
   font-size: 2.5em;
   line-height: 0.9em;
   content: '\e600';
-  color: rgb(205, 205, 205);
+  color: #707070;
 }
 
 .h5p-question-feedback-tail {
