--- a/styles/question.css
+++ b/styles/question.css
@@ -95,11 +95,8 @@
 
 .h5p-question-introduction {
   margin: 1em;
-}
-
-.h5p-question-introduction {
   font-size: 1.125em;
-  line-height: 1.125em;
+  line-height: 1;
 }
 
 .h5p-question-introduction > p {
