--- a/styles/question.css
+++ b/styles/question.css
@@ -129,7 +129,8 @@
 }
 
 .h5p-question-scorebar.h5p-question-visible {
-  min-width: 13em;
+  width: 13em;
+  max-width: calc(100% - 2em);
   margin: 0 0 1em 1em;
   padding-right: 0.5em;
   display: inline-block;
