Change stylesheet to position audio elements correctly

--- a/styles/question.css
+++ b/styles/question.css
@@ -3,7 +3,14 @@
   position: relative;
 }
 .h5p-question-audio {
-  width: 100%;
+  margin: 1em 1em 0 1em;
+  width: calc(100% - 2em);
+}
+.h5p-question-audio .h5p-audio-inner > button {
+  font-size: 1.5em;
+}
+.h5p-question-audio .h5p-audio-inner.h5p-audio-transparent {
+  display: none;
 }
 .h5p-question-video {
   line-height: 0;
